# Jarvis-An-AI-Assistant

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  README.md  celerybeat-schedule.db  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/: deps.py
backend/app/api/routes/: auth.py  command.py  day.py  google_auth.py  tasks.py  users.py
backend/app/core/: crypto_tokens.py  security.py
backend/app/db/: models.py  session.py  sync_session.py
backend/app/integrations/: fcm.py  google_calendar.py
backend/app/schemas/: auth.py  command.py  day.py  tasks.py
backend/app/services/: inference.py  orchestrator.py  task_service.py
backend/app/utils/: timezone.py
backend/app/workers/: celery_app.py  tasks.py
backend/tests/: test_inference.py  test_security.py
mobile/: .env.example  App.tsx  app.json  package-lock.json  package.json
mobile/src/: api.ts
mobile/src/context/: AuthContext.tsx
mobile/src/screens/: LoginScreen.tsx  RegisterScreen.tsx  TodayScreen.tsx
